@@ -203,7 +203,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .tips-defn{color:#000;display:block;font-size:12px;line-height:18px;padding:4px 16px 16px 16px}
 .tips-mark0{border:9px solid;border-color:transparent transparent #adcb83 #adcb83;content:' ';height:0;left:16px;position:absolute;top:-18px;width:0}
 .tips-mark1{border:7px solid;border-color:transparent transparent #92c86a #92c86a;content:' ';height:0;left:18px;position:absolute;width:0;top:-14px}
-.tips-term{color:Yellow;display:block;font-size:16px;line-height:18px;padding:8px 16px 4px 16px}
+.tips-term{color:#881102;display:block;font-size:16px;line-height:18px;padding:8px 16px 4px 16px}
 .unbounded-x{overflow-x:auto}
 .upload-file{margin:9px;overflow:hidden;position:relative}
 .upload-file .upload{cursor:pointer;-khtml-opacity:0;-moz-opacity:0;-webkit-opacity:0;opacity:0;-ms-filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);filter:alpha(opacity=0);position:absolute;top:0;right:0}
