@@ -414,7 +414,7 @@ table tr th:last-child, table tr td:last-child {
    width: 0; top: -14px;
 }
 .tips-term {
-   color: Yellow; display: block; font-size: 16px; line-height: 18px;
+   color: @contrast; display: block; font-size: 16px; line-height: 18px;
    padding: 8px 16px 4px 16px;
 }
 .unbounded-x { overflow-x: auto; }
